objects/Timesheet__c.object
<CustomObject>
    <label>Timesheet</label>
    <nameField>
        <label>Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Break_In__c</fullName>
        <label>Break In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Punch_In__c</fullName>
        <label>Punch In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Break_Out__c</fullName>
        <label>Break Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Punch_Out__c</fullName>
        <label>Punch Out</label>
        <type>DateTime</type>
    </fields>
</CustomObject>